# worst-physics-engine-ever

./: .gitignore  Cargo.toml
.github/workflows/: release.yaml
assets/: Typical_2D_platformer_example.ldtk
src/: aabb_picking_backend.rs  audio.rs  components.rs  crash.rs  edit.rs  lost.rs  main.rs  menu.rs  play.rs  systems.rs  won.rs
wasm/: index.html  wpee.js
